{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 79,
  "lineage": "6fc54777-fb88-ba6f-4116-8928c0141ecf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:881087662318:instance/i-019a1332b391d8dcd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019a1332b391d8dcd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress-pub-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef896d9150a461ba",
            "private_dns": "ip-10-121-0-237.ec2.internal",
            "private_ip": "10.121.0.237",
            "public_dns": "ec2-3-93-152-255.compute-1.amazonaws.com",
            "public_ip": "3.93.152.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08e5d7acbcca47165",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0324dff6c4ddf4898",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e9f07b92157ec8d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.sg",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "worpdress_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c65ee66032356d3f",
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068402c8dff12a73a",
            "owner_id": "881087662318",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c65ee66032356d3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-route-table"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_internet_gateway.worpdress_igw",
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f7f2c7ffaeaef5",
            "route_table_id": "rtb-068402c8dff12a73a",
            "subnet_id": "subnet-0324dff6c4ddf4898"
          },
          "dependencies": [
            "aws_internet_gateway.worpdress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a89c19bcc48d36cb",
            "route_table_id": "rtb-068402c8dff12a73a",
            "subnet_id": "subnet-0321f72fad25e96d6"
          },
          "dependencies": [
            "aws_route_table.wp-rt",
            "aws_subnet.public-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7da351f52f6fc59",
            "route_table_id": "rtb-068402c8dff12a73a",
            "subnet_id": "subnet-04687e86183e8fb53"
          },
          "dependencies": [
            "aws_route_table.wp-rt",
            "aws_subnet.public-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:security-group/sg-00649a0a8a14cfc5b",
            "description": "Allow ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00649a0a8a14cfc5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e9f07b92157ec8d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": null,
            "owner_id": "881087662318",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:security-group/sg-09e9f07b92157ec8d",
            "description": "Allow ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e9f07b92157ec8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.121.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg",
            "name_prefix": null,
            "owner_id": "881087662318",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-0a3a6cebb0ef9adec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.121.3.0/24",
            "id": "subnet-0a3a6cebb0ef9adec",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-private-subnet-1"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-0011cd107178948a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.121.4.0/24",
            "id": "subnet-0011cd107178948a4",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-private-subnet-2"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-0df712f2b6e3efc92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.121.5.0/24",
            "id": "subnet-0df712f2b6e3efc92",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-private-subnet-3"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-0324dff6c4ddf4898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.121.0.0/24",
            "id": "subnet-0324dff6c4ddf4898",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-public-subnet-1"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-0321f72fad25e96d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.121.1.0/24",
            "id": "subnet-0321f72fad25e96d6",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-public-subnet-2"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:subnet/subnet-04687e86183e8fb53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.121.2.0/24",
            "id": "subnet-04687e86183e8fb53",
            "map_public_ip_on_launch": true,
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-public-subnet-3"
            },
            "vpc_id": "vpc-09e699ec51a0ec1b4"
          },
          "dependencies": [
            "aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881087662318:vpc/vpc-09e699ec51a0ec1b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.121.0.0/16",
            "default_network_acl_id": "acl-006155ea9efbd50af",
            "default_route_table_id": "rtb-0684321b69dbc14a5",
            "default_security_group_id": "sg-0735893f218ba8f04",
            "dhcp_options_id": "dopt-6ae31610",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09e699ec51a0ec1b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0684321b69dbc14a5",
            "owner_id": "881087662318",
            "tags": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    }
  ]
}